spacing fix

--- a/app/assets/style/helper/_spacing.scss
+++ b/app/assets/style/helper/_spacing.scss
@@ -271,7 +271,7 @@
 
 .py{
     &-8{
-        padding-top: $spacing*8;
+        
         padding-bottom: $spacing*8;
     }
     @include pad-992{
